--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # General Options
-set-option -g base-index 0
+set-option -g base-index 1
 set-option -g renumber-windows off
 set-option -g status-interval 1
 
@@ -69,8 +69,8 @@ set-option -g status-left-length 20
 
 # status-right-line
 set-option -g status-right-style fg=colour13,bright
-set-option -g status-right "[ #[fg=colour46]#{=19:pane_title}#[fg=default] %Y-%m-%d %H:%M ]"
-set-option -g status-right-length 40
+set-option -g status-right "[ #[fg=colour46]#22T#[fg=default] %Y-%m-%d %H:%M ]"
+set-option -g status-right-length 60
 
 # window-status general option
 set-window-option -g utf8 on
