--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,8 +35,8 @@ unbind-key      C-Right
 # bind-key list
 bind-key        `       last-window
 bind-key        C-a     send-prefix
-bind-key        |       split-window -h
-bind-key        C       new-window -c -
+bind-key        |       split-window -h -c "#{pane_current_path}"
+bind-key        c       new-window -c "#{pane_current_path}"
 bind-key        e       setw synchronize-panes on
 bind-key        E       setw synchronize-panes off
 bind-key        R       source-file ~/.tmux.conf \; display "Reloaded!"
