--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,10 @@
-# General Options
-set-option -g base-index 1
+# start tab numbering at 1
+set-window-option -g pane-base-index 1
+
+# general Options
 set-option -g renumber-windows off
 set-option -g status-interval 1
+set-option -g -q mouse on
 
 # set tmux send defautl-terminal as screen-256color for support 256-colros display
 set-option -g default-terminal screen-256color
@@ -30,7 +33,6 @@ unbind-key      C-Up
 unbind-key      C-Down
 unbind-key      C-Left
 unbind-key      C-Right
-
 
 # bind-key list
 bind-key        `       last-window
@@ -74,7 +76,6 @@ set-option -g status-right-length 60
 
 # window-status general option
 set-window-option -g utf8 on
-set-window-option -g pane-base-index 0
 set-window-option -g monitor-activity on
 set-window-option -g clock-mode-style 24
 set-window-option -g clock-mode-colour colour184
